# obelisk-examples

executable-config/: README.md
executable-config/backend/: backend.cabal
executable-config/backend/src/: Backend.hs
executable-config/config/backend/: record  string_config
executable-config/frontend/src/: Frontend.hs
pastebin/backend/: backend.cabal
pastebin/backend/src/: Backend.hs
pastebin/common/src/Common/: Api.hs  Route.hs  Schema.hs
pastebin/frontend/: frontend.cabal
pastebin/frontend/src/: Frontend.hs
pastebin/static/: style.css
url-shortener/: .gitignore  default.nix
url-shortener/backend/: backend.cabal
url-shortener/backend/src/: Backend.hs
url-shortener/common/: common.cabal
url-shortener/common/src/Common/: Route.hs
url-shortener/frontend/: frontend.cabal
url-shortener/frontend/src/: Frontend.hs
