name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
             , aeson
             , aeson-gadt-th
             , database-id-obelisk
             , obelisk-route
             , mtl
             , text
             , database-id-class
default-extensions:
  ConstraintKinds
  TypeFamilies
  PolyKinds
exposed-modules:
  Common.Api
  Common.Route
