name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , containers
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-executable-config-lookup
               , obelisk-generated-static
               , jsaddle
               , text
  exposed-modules:
    Frontend
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
